...
    ) {

        Button(
            onClick = onBackClick,
            modifier = Modifier.fillMaxWidth()
        ) {
            Text("Мои игры")
        }

        when {

            uiState.isCatalogLoading -> {

...
            )

            Button(
                onClick = onAddClick,
                modifier = Modifier.fillMaxWidth()
            ) {
                Text("Добавить в библиотеку")
            }
        }
    }
}
