...
                Button(
                    onClick = {
                        onEditClick(game)
                    },
                    modifier = Modifier.weight(1f)
                ) {
                    Text("Редактировать")
                }

                Button(
                    onClick = onDeleteClick,
                    modifier = Modifier.weight(1f)
                ) {
...
