...
        ) {

            Text(
                if (uiState.isImageUploading) {
                    "Загрузка..."
                } else {
                    "Сохранить"
                }
            )
        }
    }
}
